--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: tesla-investment-platform
+    name: onlinetes-invest-platform
     env: python
     region: oregon
     plan: starter
@@ -18,7 +18,7 @@ services:
         sync: false
       - key: DATABASE_URL
         fromDatabase:
-          name: tesla-investment-db
+          name: onlinetes-investment-db
           property: connectionString
       - key: CSRF_COOKIE_SECURE
         value: True
@@ -65,6 +65,6 @@ services:
         value: "forexbtte@gmail.com"
 
 databases:
-  - name: tesla-investment-db
-    databaseName: investment_platform
-    user: investment_user
+  - name: onlinetes-investment-db
+    databaseName: onlinetes_investment
+    user: onlinetes_user
