--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,8 @@ services:
         generateValue: true
       - key: DEBUG
         value: False
+      - key: SITE_URL
+        sync: false
       - key: ALLOWED_HOSTS
         sync: false
       - key: DATABASE_URL
